# SpinningEarthAR

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  Makefile  README.md  main.cpp
3d_models/: moon.mtl
config/: config.yaml
include/: my_bg_quad.hpp  my_camera.hpp  my_cli.hpp  my_hands.h  my_hands.hpp  my_mesh.h  my_mesh.hpp  my_model.h  my_model.hpp  my_shader.hpp  my_webcam.h  my_webcam.hpp
models/: earth.mtl  spitfire.mtl
shaders/: bg_quad.fs  earth_shader.fs  earth_shader.vs
src/: glad.c  my_bg_quad.cpp  my_cli.cpp  my_hands.cpp  my_webcam.cpp  stb.cpp
